--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
-    "react-scripts": "3.3.0"
+    "react-places-autocomplete": "^7.2.1",
+    "react-scripts": "3.3.0",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
