--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
-    "google-maps-react": "^2.0.2",
+    "google-maps-react": "^2.0.6",
     "leaflet": "^1.6.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
