--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^2.6.1",
     "react-places-autocomplete": "^7.2.1",
     "react-scripts": "3.3.0",
+    "react-streetview": "^1.1.1",
     "recompose": "^0.30.0"
   },
   "scripts": {
